--- a/packages/theme/src/styles/vars.css
+++ b/packages/theme/src/styles/vars.css
@@ -6,6 +6,15 @@
 }
 
 /**
+* FontSize
+* -------------------------------------------------------------------------- */
+:root {
+  --m-s-text-1: 24px;
+  --m-s-text-2: 18px;
+  --m-s-text-3: 14px;
+}
+
+/**
  * Colors: Solid
  * -------------------------------------------------------------------------- */
 :root {
@@ -180,15 +189,15 @@
  * -------------------------------------------------------------------------- */
 
 :root {
-  --vp-c-text-1: rgba(60, 60, 67);
-  --vp-c-text-2: rgba(60, 60, 67, 0.78);
-  --vp-c-text-3: rgba(60, 60, 67, 0.56);
+  --vp-c-text-1: rgba(20, 20, 20);
+  --vp-c-text-2: rgba(20, 20, 20, 0.8);
+  --vp-c-text-3: rgba(20, 20, 20, 0.6);
 }
 
 .dark {
-  --vp-c-text-1: rgba(255, 255, 245, 0.86);
-  --vp-c-text-2: rgba(235, 235, 245, 0.6);
-  --vp-c-text-3: rgba(235, 235, 245, 0.38);
+  --vp-c-text-1: rgba(255, 255, 245, 1);
+  --vp-c-text-2: rgba(255, 255, 245, 0.8);
+  --vp-c-text-3: rgba(255, 255, 245, 0.6);
 }
 
 /**
