--- a/packages/theme/src/styles/vars.css
+++ b/packages/theme/src/styles/vars.css
@@ -1,17 +1,97 @@
 /**
-* Layout: Header
+* Layout
 * -------------------------------------------------------------------------- */
 :root {
-    --m-layout-header-height: 64px;
+  /**
+  * header
+  * -------------------------------------------------------------------------- */
+  --m-layout-header-height: 64px;
+
+  /**
+  * content
+  * -------------------------------------------------------------------------- */
+  --m-layout-content-margin: 24px;
+}
+
+@media (max-width: 960px) {
+  :root {
+    --m-layout-content-margin: 12px;
+  }
+}
+
+@media (max-width: 768px) {
+  :root {
+    --m-layout-content-margin: 0px;
+  }
 }
 
 /**
-* FontSize
+* Border
 * -------------------------------------------------------------------------- */
 :root {
-  --m-s-text-1: 24px;
-  --m-s-text-2: 18px;
+  /**
+  * border-radius
+  * -------------------------------------------------------------------------- */
+  --m-s-br-1: 12px;
+  --m-s-br-2: 8px;
+  --m-s-br-3: 4px;
+}
+
+/**
+* Font
+* -------------------------------------------------------------------------- */
+:root {
+  /**
+  * FontSize
+  * -------------------------------------------------------------------------- */
+  --m-s-text-1: 18px;
+  --m-s-text-2: 16px;
   --m-s-text-3: 14px;
+
+  /**
+  * FontWight
+  * -------------------------------------------------------------------------- */
+  --m-s-fw-1: 600;
+  --m-s-fw-2: 500;
+  --m-s-fw-3: 400;
+
+  /**
+  * LineHeight
+  * -------------------------------------------------------------------------- */
+  --m-s-lh-1: 1.5em;
+  --m-s-lh-2: 1.2em;
+  --m-s-lh-3: 1em;
+}
+
+/**
+* color
+* -------------------------------------------------------------------------- */
+:root {
+  /**
+  * background
+  * -------------------------------------------------------------------------- */
+  --m-c-bg-1: #fff;
+  --m-c-bg-2: #f7f8fa;
+  --m-c-bg-3: #f2f3f5;
+
+  /**
+  * border
+  * -------------------------------------------------------------------------- */
+  --m-c-bd-1: #e4e6eb;
+}
+
+.dark {
+  /**
+  * background
+  * -------------------------------------------------------------------------- */
+  --m-c-bg-1: #000;
+  --m-c-bg-2: #181818;
+  --m-c-bg-3: #333;
+
+  /**
+  * border
+  * -------------------------------------------------------------------------- */
+  --m-c-bd-1: #ffffff33;
 }
 
 /**
