--- a/packages/theme/src/styles/base.css
+++ b/packages/theme/src/styles/base.css
@@ -38,7 +38,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   color: var(--vp-c-text-1);
-  background-color: var(--vp-c-bg);
+  background-color: var(--m-c-bg-3);
   font-synthesis: style;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
