--- a/packages/theme/src/styles/utils.scss
+++ b/packages/theme/src/styles/utils.scss
@@ -6,15 +6,11 @@
             display: flex;
             flex-flow: $value nowrap;
             align-items: center;
-
-            &:nth-child(n) {
-                flex-shrink: 1;
-            }
         }
     }
 
     &-1 {
-        flex: 1;
+        flex: 1 0 0;
     }
 
     &-start {
@@ -24,6 +20,11 @@
     &.gap {
         $space: (small: 8px, normal: 10px, large: 20px);
     }
+}
+
+.full {
+    width: 100%;
+    height: 100%;
 }
 
 .w-full {
@@ -50,28 +51,6 @@
             &-#{$i}-#{$j} > *:nth-child(n + 2) {
                 margin-#{$direction}: $space;
             }
-        }
-    }
-}
-
-.m-list  {
-    $padding-col: (small: 8px, normal: 10px, large: 20px);
-    $padding-row: (small: 8px, normal: 10px, large: 20px);
-    $item-margin-top: (small: 10px, normal: 20px, large: 30px);
-
-    padding: map-get($padding-col, normal) map-get($padding-row, normal);
-    @each $key, $value in $padding-col {
-        &-#{$key} {
-            padding: $value map-get($padding-row, $key);
-        }
-    }
-
-    & .m-item + .m-item {
-        margin-top: map-get($map: $item-margin-top, $key: normal);
-    }
-    @each $key, $value in $item-margin-top {
-        & .m-item-#{$key} + .m-item-#{$key} {
-            margin-top: $value;
         }
     }
 }
