--- a/packages/theme/src/styles/base.css
+++ b/packages/theme/src/styles/base.css
@@ -16,6 +16,8 @@
 ::before,
 ::after {
   box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: transparent;
 }
 
 html {
