--- a/packages/theme/src/styles/utils.scss
+++ b/packages/theme/src/styles/utils.scss
@@ -36,7 +36,7 @@
 
 .full {
     width: 100%;
-    min-height: 100%;
+    height: 100%;
 }
 
 .w-full {
@@ -44,7 +44,7 @@
 }
 
 .h-full {
-    min-height: 100%;
+    height: 100%;
 }
 
 .space {
